bk_ida/gccida/g1/c_sizeof
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_sizeof/src/c-typeck.c:1186:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v3; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_sizeof/src/c-typeck.c:1187:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_sizeof/src/c-typeck.c:1188:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_sizeof/src/c-typeck.c:1195:19: error: expected expression
v3 = ( tree_node *)*( &global_trees + 16); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_sizeof/src/c-typeck.c:1195:8: error: use of undeclared identifier 'tree_node'
v3 = ( tree_node *)*( &global_trees + 16); 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_sizeof/src/c-typeck.c:1201:19: error: expected expression
v3 = ( tree_node *)*( &global_trees + 16); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_sizeof/src/c-typeck.c:1201:8: error: use of undeclared identifier 'tree_node'
v3 = ( tree_node *)*( &global_trees + 16); 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_sizeof/src/c-typeck.c:1205:19: error: expected expression
v3 = ( tree_node *)*( &global_trees + 16); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_sizeof/src/c-typeck.c:1205:8: error: use of undeclared identifier 'tree_node'
v3 = ( tree_node *)*( &global_trees + 16); 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_sizeof/src/c-typeck.c:1216:19: error: expected expression
v3 = ( tree_node *)*( &global_trees + 15); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_sizeof/src/c-typeck.c:1216:8: error: use of undeclared identifier 'tree_node'
v3 = ( tree_node *)*( &global_trees + 15); 
       ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_sizeof/src/obj/c-typeck.o] Error 1
